--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,15 +16,15 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image - frontend
-      run: docker build "frontend" --tag docker.happyfir.com/misc/soen390:latest
+      run: docker build "frontend" --tag docker.happyfir.com/misc/soen390:dev
     - name: Deploy - frontend
-      run: docker push docker.happyfir.com/misc/soen390:latest
+      run: docker push docker.happyfir.com/misc/soen390:dev
     - name: Build the Docker image - backend
-      run: docker build "backend" --tag docker.happyfir.com/misc/soen390-backend:latest
+      run: docker build "backend" --tag docker.happyfir.com/misc/soen390-backend:dev
     - name: Deploy - backend
-      run: docker push docker.happyfir.com/misc/soen390-backend:latest
+      run: docker push docker.happyfir.com/misc/soen390-backend:dev
     - name: Webhook POST Action
       uses: muinmomin/webhook-action@v1.0.0
       with:
         # URL of webhook to send post request to
-        url: ${{ secrets.WEBHOOK_URL }}
+        url: ${{ secrets.DEV_WEBHOOK_URL }}
