--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,10 @@
-sonar.projectKey=eb19b312c7eb1d1d13bdf86600f58e60d5811dd3
+sonar.projectKey=sqp_b2926b5650f93be6f1a1a1351bc5945b948e2cc1
+sonar.host.url=http://localhost:9000
+
+
+# To run Sonarqube
+#  ./sonar-scanner \
+#  -Dsonar.projectKey=sonarqube \
+#  -Dsonar.sources=. \
+#  -Dsonar.host.url=http://localhost:9000 \
+#  -Dsonar.token=sqp_b2926b5650f93be6f1a1a1351bc5945b948e2cc1
