--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.8",
+    "prettier": "^3.2.4",
     "prisma": "^5.8.1",
     "sonarqube-scanner": "^3.3.0",
     "ts-node": "^10.9.2",
