--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 NODE_ENV = development
-PORT = 8000
+PORT = 5000
 JWT_SECRET = abc123
 
 
@@ -10,4 +10,4 @@ JWT_SECRET = abc123
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgresdev:soen390team6dev@localhost:5433/postgresdev"
+DATABASE_URL="postgresql://postgresprod:soen390team6@db:5432/postgresprod"
