--- a/backend/.env
+++ b/backend/.env
@@ -10,4 +10,4 @@ JWT_SECRET = abc123
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgresdev:soen390team6dev@localhost:5432/postgresdev"
+DATABASE_URL="postgresql://postgresdev:soen390team6dev@db:5432/postgresdev"
