--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.1",
+    "dotenv-cli": "^7.3.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
