--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,6 @@
     "@types/mocha": "^10.0.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "chai": "^5.0.3",
-    "chai-http": "^4.4.0",
     "colors": "^1.4.0",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
@@ -31,19 +29,24 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.5",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mocha": "^10.2.0",
+    "minio": "^7.1.3",
     "multer": "^1.4.5-lts.1",
     "node": "^21.6.1",
     "nodemon": "^3.0.3",
-    "request": "^2.88.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.8",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^29.7.0",
     "prettier": "^3.2.4",
     "prisma": "^5.8.1",
     "sonarqube-scanner": "^3.3.0",
+    "superagent": "^8.1.2",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
