--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon index.js",
     "prisma": "dotenv -e .env.local -- npx prisma studio",
-    "migrate": "dotenv -e .env.local -- npx prisma migrate dev --name update-database-relational"
+    "migrate": "dotenv -e .env.local -- npx prisma migrate dev --name update-database-relational",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.8",
+    "jest": "^29.7.0",
     "prettier": "^3.2.4",
     "prisma": "^5.8.1",
     "sonarqube-scanner": "^3.3.0",
