--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.8.1",
+    "@types/jest": "^29.5.12",
     "@types/mocha": "^10.0.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -38,11 +39,14 @@
     "node": "^21.6.1",
     "nodemon": "^3.0.3",
     "request": "^2.88.2",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.8",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^2.0.4",
     "prettier": "^3.2.4",
     "prisma": "^5.8.1",
     "sonarqube-scanner": "^3.3.0",
