--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.22.0",
     "identity-obj-proxy": "^3.0.0",
     "react-router-dom": "^6.21.3"
   }
