--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,36 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+backend/coverage/coverage-final.json
+backend/coverage/lcov-report/authMiddleware.js.html
+backend/coverage/lcov-report/backend/controller/fileController.js.html
+backend/coverage/lcov-report/backend/controller/index.html
+backend/coverage/lcov-report/backend/controller/userController.js.html
+backend/coverage/lcov-report/backend/index.html
+backend/coverage/lcov-report/backend/index.js.html
+backend/coverage/lcov-report/backend/middleware/authMiddleware.js.html
+backend/coverage/lcov-report/backend/middleware/errorMiddleware.js.html
+backend/coverage/lcov-report/backend/middleware/index.html
+backend/coverage/lcov-report/backend/middleware/minioMiddleware.js.html
+backend/coverage/lcov-report/backend/routes/fileRoutes.js.html
+backend/coverage/lcov-report/backend/routes/index.html
+backend/coverage/lcov-report/backend/routes/userRoutes.js.html
+backend/coverage/lcov-report/base.css
+backend/coverage/lcov-report/block-navigation.js
+backend/coverage/lcov-report/controller/index.html
+backend/coverage/lcov-report/controller/userController.js.html
+backend/coverage/lcov-report/favicon.png
+backend/coverage/lcov-report/index.html
+backend/coverage/lcov-report/middleware/authMiddleware.js.html
+backend/coverage/lcov-report/middleware/index.html
+backend/coverage/lcov-report/prettify.css
+backend/coverage/lcov-report/prettify.js
+backend/coverage/lcov-report/sort-arrow-sprite.png
+backend/coverage/lcov-report/sorter.js
+backend/coverage/lcov-report/userController.js.html
+backend/coverage/lcov.info
+backend/coverage/coverage-final.json
+backend/coverage/clover.xml
+backend/controller/userController.js
+backend/__tests__/login.spec.js
+backend/__tests__/authMiddleware.spec.js
