--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,10 @@
-sonar.projectKey=sqp_b2926b5650f93be6f1a1a1351bc5945b948e2cc1
+sonar.projectKey=test123
 sonar.host.url=http://localhost:9000
-
-
+sonar.projectName=sonarqube
+sonar.token=sqp_0bea1001cdda925cecd01ed6985e1bb6a1406617
+sonar.projectVersion= 1.0.0
+sonar.sources=.
+sonar.typescript.lcov.reportPaths=/coverage/lcov.info
 # To run Sonarqube
 #  ./sonar-scanner \
 #  -Dsonar.projectKey=sonarqube \
