--- a/.github/workflows/docker-image-check.yml
+++ b/.github/workflows/docker-image-check.yml
@@ -15,5 +15,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image - frontend
       run: docker build "frontend" --tag docker.happyfir.com/misc/soen390:latest
-    - name: Build the Docker image - backend
-      run: docker build "backend" --tag docker.happyfir.com/misc/soen390-backend:latest
+    - name: Build the Docker image - user-service
+      run: docker build "user-service" --tag docker.happyfir.com/misc/soen390-user-service:latest
