--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,10 +17,10 @@ jobs:
       run: docker build "frontend" --tag docker.happyfir.com/misc/soen390:latest
     - name: Deploy - frontend
       run: docker push docker.happyfir.com/misc/soen390:latest
-    - name: Build the Docker image - backend
-      run: docker build "backend" --tag docker.happyfir.com/misc/soen390-backend:latest
-    - name: Deploy - backend
-      run: docker push docker.happyfir.com/misc/soen390-backend:latest
+    - name: Build the Docker image - user-service
+      run: docker build "user-service" --tag docker.happyfir.com/misc/soen390-user-service:latest
+    - name: Deploy - user-service
+      run: docker push docker.happyfir.com/misc/soen390-user-service:latest
     - name: Webhook POST Action
       uses: muinmomin/webhook-action@v1.0.0
       with:
