Attempt to increase timeout setting for workflow

--- a/.github/workflows/docker-image-dev.yml
+++ b/.github/workflows/docker-image-dev.yml
@@ -25,6 +25,7 @@ jobs:
       run: docker push docker.happyfir.com/misc/soen390-backend:dev
     - name: Webhook POST Action
       uses: muinmomin/webhook-action@v1.0.0
+      timeout-minutes: 10
       with:
         # URL of webhook to send post request to
         url: ${{ secrets.DEV_WEBHOOK_URL }}
