--- a/.github/workflows/docker-image-dev.yml
+++ b/.github/workflows/docker-image-dev.yml
@@ -21,8 +21,8 @@ jobs:
       run: docker push docker.happyfir.com/misc/soen390:dev
 
     - name: Sleep for 60 seconds
-      run: Start-Sleep -s 60
-      shell: powershell
+      run: sleep 60s
+      shell: bash
 
     - name: Build the Docker image - backend
       run: docker build "backend" --tag docker.happyfir.com/misc/soen390-backend:dev
@@ -30,8 +30,8 @@ jobs:
       run: docker push docker.happyfir.com/misc/soen390-backend:dev
 
     - name: Sleep for 60 seconds
-      run: Start-Sleep -s 60
-      shell: powershell
+      run: sleep 60s
+      shell: bash
 
     - name: Webhook POST Action
       uses: muinmomin/webhook-action@v1.0.0
