Retrying with timeout_minutes (20 min) in a different spot

--- a/.github/workflows/docker-image-dev.yml
+++ b/.github/workflows/docker-image-dev.yml
@@ -23,13 +23,9 @@ jobs:
       run: docker build "backend" --tag docker.happyfir.com/misc/soen390-backend:dev
     - name: Deploy - backend
       run: docker push docker.happyfir.com/misc/soen390-backend:dev
-
-    - name: Sleep for 10 minutes
-      run: sleep 10m
-      shell: bash
-
     - name: Webhook POST Action
       uses: muinmomin/webhook-action@v1.0.0
       with:
         # URL of webhook to send post request to
         url: ${{ secrets.DEV_WEBHOOK_URL }}
+        timeout_minutes: 20
