--- a/condo-service/package.json
+++ b/condo-service/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "prisma": "dotenv -e .env.local -- npx prisma studio",
+    "migrate": "dotenv -e .env.local -- npx prisma migrate dev --name update-database-relational"
   },
   "author": "",
   "license": "MIT",
