--- a/cost-service/package.json
+++ b/cost-service/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "prisma": "dotenv -e .env -- npx prisma studio",
+    "migrate": "dotenv -e .env -- npx prisma migrate dev --name update-database-relational",
+    "seed": "node prisma/seed.js"
   },
   "author": "",
   "license": "MIT",
