--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@babel/preset-env": "^7.23.9",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -53,8 +57,8 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^13.6.4",
     "axios-mock-adapter": "^1.22.0",
+    "cypress": "^13.6.4",
     "identity-obj-proxy": "^3.0.0",
     "react-router-dom": "^6.21.3"
   }
