--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,8 +10,8 @@ ENV PATH /app/node_modules/.bin:$PATH
 # install app dependencies
 COPY package.json ./
 COPY package-lock.json ./
-RUN npm install --silent && npm cache clean --force
-RUN npm install react-scripts@5.0.1 -g --silent
+RUN npm install --silent
+RUN npm install react-scripts@5.0.1 -g --silent && npm cache clean --force
 
 # add app
 COPY . ./
