--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,10 +15,18 @@ jobs:
         run: docker build "frontend" --tag docker.happyfir.com/misc/soen390:latest
       - name: Deploy - frontend
         run: docker push docker.happyfir.com/misc/soen390:latest
-      - name: Build the Docker image - backend
-        run: docker build "backend" --tag docker.happyfir.com/misc/soen390-backend:latest
-      - name: Deploy - backend
-        run: docker push docker.happyfir.com/misc/soen390-backend:latest
+      - name: Build the Docker image - user-service
+        run: docker build "user-service" --tag docker.happyfir.com/misc/soen390-userservice:latest
+      - name: Deploy - user-service
+        run: docker push docker.happyfir.com/misc/soen390-userservice:latest
+      - name: Build the Docker image - condo-service
+        run: docker build "condo-service" --tag docker.happyfir.com/misc/soen390-condoservice:latest
+      - name: Deploy - condo-service
+        run: docker push docker.happyfir.com/misc/soen390-condoservice:latest
+      - name: Build the Docker image - cost-service
+        run: docker build "cost-service" --tag docker.happyfir.com/misc/soen390-costservice:latest
+      - name: Deploy - cost-service
+        run: docker push docker.happyfir.com/misc/soen390-costservice:latest
       - name: Webhook POST Action
         uses: muinmomin/webhook-action@v1.0.0
         id: post0
