--- a/condo-management-app/package.json
+++ b/condo-management-app/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "expo": "~50.0.4",
     "expo-status-bar": "~1.11.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-safe-area-context": "^4.9.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
