--- a/server/package.json
+++ b/server/package.json
@@ -61,6 +61,7 @@
     "@types/express": "^4.17.19",
     "@types/graphql-type-json": "0.3.3",
     "@types/jest": "^29.5.5",
+    "@types/multer": "^1.4.11",
     "@types/normalize-path": "3.0.0",
     "@types/passport-http": "0.3.9",
     "@types/passport-jwt": "3.0.10",
@@ -79,6 +80,8 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "modulePathIgnorePatterns": ["<rootDir>/dist/"]
+    "modulePathIgnorePatterns": [
+      "<rootDir>/dist/"
+    ]
   }
 }
