--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "dotenv": "16.3.1",
     "graphql": "^16.8.1",
     "graphql-type-json": "0.3.2",
+    "minio": "^7.1.3",
     "nest-access-control": "^3.1.0",
     "npm-run-all": "4.1.5",
     "passport": "0.6.0",
