--- a/condo-management-app/package.json
+++ b/condo-management-app/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "axios": "^1.6.7",
     "expo": "~50.0.4",
+    "expo-constants": "~15.4.5",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
