--- a/.github/workflows/docker-image-dev.yml
+++ b/.github/workflows/docker-image-dev.yml
@@ -17,18 +17,16 @@ jobs:
         run: docker build "frontend" --tag docker.happyfir.com/misc/soen390:dev
       - name: Deploy - frontend
         run: docker push docker.happyfir.com/misc/soen390:dev
+
       - name: Build the Docker image - user-service
         run: docker build "user-service" --tag docker.happyfir.com/misc/soen390-userservice:dev
       - name: Deploy - user-service
         run: docker push docker.happyfir.com/misc/soen390-userservice:dev
-      - name: Build the Docker image - condo-service
-        run: docker build "condo-service" --tag docker.happyfir.com/misc/soen390-condoservice:dev
-      - name: Deploy - condo-service
-        run: docker push docker.happyfir.com/misc/soen390-condoservice:dev
-      - name: Build the Docker image - cost-service
-        run: docker build "cost-service" --tag docker.happyfir.com/misc/soen390-costservice:dev
-      - name: Deploy - cost-service
-        run: docker push docker.happyfir.com/misc/soen390-costservice:dev
+      - name: Build the Docker image - server
+        run: docker build "server" --tag docker.happyfir.com/misc/soen390-server:dev
+      - name: Deploy - server
+        run: docker push docker.happyfir.com/misc/soen390-server:dev
+
       - name: Webhook POST Action
         uses: muinmomin/webhook-action@v1.0.0
         id: post0
