--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,7 +11,7 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm ci --silent
-RUN npm ci react-scripts@5.0.1 -g --silent
+RUN npm i react-scripts@5.0.1 -g --silent
 
 # add app
 COPY . ./
