--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "10.2.7",
     "@nestjs/graphql": "12.0.9",
     "@nestjs/jwt": "^10.1.1",
+    "@nestjs/microservices": "^10.3.3",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "10.2.7",
     "@nestjs/serve-static": "4.0.0",
