--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "cypress": "^13.6.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-mock-axios": "^4.7.3",
     "react-router-dom": "^6.21.3",
     "ts-jest": "^29.1.2"
   }
