--- a/server/package.json
+++ b/server/package.json
@@ -33,8 +33,10 @@
     "@nestjs/microservices": "^10.3.3",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "10.2.7",
+    "@nestjs/platform-socket.io": "^10.3.4",
     "@nestjs/serve-static": "4.0.0",
     "@nestjs/swagger": "7.1.13",
+    "@nestjs/websockets": "^10.3.4",
     "@prisma/client": "^5.4.2",
     "@types/bcrypt": "5.0.0",
     "bcrypt": "5.1.1",
@@ -54,6 +56,7 @@
     "passport-http": "0.3.0",
     "passport-jwt": "4.0.1",
     "reflect-metadata": "0.1.13",
+    "socket.io": "^4.7.5",
     "ts-node": "10.9.1",
     "type-fest": "2.19.0",
     "validator": "13.11.0"
