--- a/.gitignore
+++ b/.gitignore
@@ -26,33 +26,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-user-service/coverage/coverage-final.json
-user-service/coverage/lcov-report/authMiddleware.js.html
-user-service/coverage/lcov-report/backend/controller/fileController.js.html
-user-service/coverage/lcov-report/backend/controller/index.html
-user-service/coverage/lcov-report/backend/controller/userController.js.html
-user-service/coverage/lcov-report/backend/index.html
-user-service/coverage/lcov-report/backend/index.js.html
-user-service/coverage/lcov-report/backend/middleware/authMiddleware.js.html
-user-service/coverage/lcov-report/backend/middleware/errorMiddleware.js.html
-user-service/coverage/lcov-report/backend/middleware/index.html
-user-service/coverage/lcov-report/backend/middleware/minioMiddleware.js.html
-user-service/coverage/lcov-report/backend/routes/fileRoutes.js.html
-user-service/coverage/lcov-report/backend/routes/index.html
-user-service/coverage/lcov-report/backend/routes/userRoutes.js.html
-user-service/coverage/lcov-report/base.css
-user-service/coverage/lcov-report/block-navigation.js
-user-service/coverage/lcov-report/controller/index.html
-user-service/coverage/lcov-report/controller/userController.js.html
-user-service/coverage/lcov-report/favicon.png
-user-service/coverage/lcov-report/index.html
-user-service/coverage/lcov-report/middleware/authMiddleware.js.html
-user-service/coverage/lcov-report/middleware/index.html
-user-service/coverage/lcov-report/prettify.css
-user-service/coverage/lcov-report/prettify.js
-user-service/coverage/lcov-report/sort-arrow-sprite.png
-user-service/coverage/lcov-report/sorter.js
-user-service/coverage/lcov-report/userController.js.html
-user-service/coverage/lcov.info
-user-service/coverage/coverage-final.json
-user-service/coverage/clover.xml
+/user-service/coverage
+
+/.idea
