--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,19 @@
-# build environment
-FROM node:20.11.1-alpine as build
+# pull official base image
+FROM node:18-alpine
+
+# set working directory
 WORKDIR /app
+
+# add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
+
+# install app dependencies
 COPY package.json ./
 COPY package-lock.json ./
 RUN npm ci --silent
-COPY . ./
-RUN npm run build
 
-# production environment
-FROM nginx:stable-alpine
-COPY --from=build /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# add app
+COPY . ./
+
+# start app
+CMD ["npm", "start"]
