--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "formik": "^2.4.5",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
